@@ -2,8 +2,7 @@
                   item_type context/portal_type;
                   use_view_action site_properties/typesUseViewActionInListings|python:();
                   item_description context/Description;
-                  item_title_or_id context/pretty_title_or_id;
-                ">
+                  item_title_or_id context/pretty_title_or_id;">
 <h2 class="tileHeadline">
     <a href="#"
        class="summary url"
