@@ -2,14 +2,15 @@
                   item_type context/portal_type;
                   use_view_action site_properties/typesUseViewActionInListings|python:();
                   item_description context/Description;
-                  item_title_or_id context/pretty_title_or_id;"
+                  item_title_or_id context/pretty_title_or_id;
+                  image_scale request/carousel_image_scale|nothing;"
             i18n:domain="collective.carousel">
 
 <a href="#"
    tal:attributes="href python:(item_type in use_view_action) and item_url+'/view' or item_url;">
     <img src="" alt=""
-         tal:condition="exists:context/image_mini"
-         tal:replace="structure python: path('nocall:context/tag')(scale='mini', css_class='tileImage')" />
+         tal:condition="exists:context/image"
+         tal:replace="structure python: path('nocall:context/tag')(scale=image_scale, css_class='tileImage')" />
 </a>
 
 <h2 class="tileHeadline">
