@@ -4,6 +4,9 @@ Changelog
 1.6.2dev (unreleased)
 ---------------------
 
+- Allow configuring of image_scales in portlets.
+  [thet]
+
 - Added MANIFEST.in to prevent issues with packaging.
   [bogdangi]
 
@@ -115,7 +118,7 @@ Changelog
 - Added information about 'resized.carousel' event to README.txt
   [spliter]
 
-- Custom 'resized.carousel' event for being able to bind custom 
+- Custom 'resized.carousel' event for being able to bind custom
   handlers to the moment when a carousel is re-sized.
   [spliter]
 
